<resources>
    <string name="app_name">Iris</string>

    <string name="action_settings">Settings</string>
    <string name="alert_permission_msg">for account %1$s</string>
    <string name="alert_permission_title">Iris needs permission</string>
    <string name="error_no_account_chosen">No account was chosen.</string>
    <string name="error_no_connection">No network connection available.</string>
    <string name="pref_keep_screen_on_title">Keep Screen On?</string>
    <string name="pref_keep_screen_on_summary">This will prevent the screen from turning off while Iris is running.</string>
    <string name="pref_keep_screen_on_key">pref_keep_screen_on</string>
    <string name="pref_sync_freq_key">pref_sync_freq</string>
    <string name="pref_sync_freq_title">Idle Sync Frequency</string>
    <string name="pref_sync_freq_summary">How often do you want to sync data while voice service is NOT running?</string>
    <string name="pref_key_gmail_account_name">GoogleAccount</string>
    <string name="pref_key_gmail_accounts">SignedInGmailAccounts</string>
    <string name="pref_key_gmail_history_id">GmailHistoryID</string>
    <string name="pref_key_gmail_syncing">GmailSyncing</string>
    <string name="action_delete">Delete</string>
    <string name="empty_mailbox">Your mailbox is empty.</string>
    <string name="action_service">Start/Stop Iris Service</string>
    <string name="action_archive">Archive</string>
    <string name="button_keep">Keep</string>
    <string name="button_delete">Delete</string>
    <string name="dialog_logout_message">Are you sure you want to logout?</string>
    <string name="dialog_logout_yes">Yes</string>
    <string name="dialog_logout_no">No</string>
    <string name="pref_cat_accounts">Accounts</string>
    <string name="pref_cat_general">General</string>
    <string name="service_pref_sync_freq_title">Voice Service Sync Frequency</string>
    <string name="service_pref_sync_freq_summary">How often to sync while voice service is running?</string>
    <string name="service_pref_sync_freq_key">pref_service_sync_freq</string>
    <string name="error_account_already_chosen">Account already in use.</string>
</resources>
